sad/ui: Truncates long path and member names (fixes #54).

--- a/sad/ui/style.css
+++ b/sad/ui/style.css
@@ -306,12 +306,12 @@ body {
 .search-result .member-name {
     font-size: 10pt;
     display: inline-block;
-    overflow-x: overlay;
+    overflow-x: hidden;
 }
 
 .search-result .namespace {
     font-size: 7pt;
-    overflow-x: overlay;
+    overflow-x: hidden;
 }
 
 .selected-search-result {
